--- a/resources/libs/jquery/index.html
+++ b/resources/libs/jquery/index.html
@@ -39,29 +39,32 @@
 		</style>
 	</head>
 	<body>
-		<div id="all">
-			<div id="a" class="a"> id=a margin=4 padding=8
-				<div id="b" class="b">id=b padding=8
-					<div id="c" class="c">id=c border=1 margin=4 auto width=300</div>
-				</div>
-				<div id="d" class="d">id=d border=10 padding=8</div>
-			</div>
-		</div>
-		<div id="rule"></div>
+        <article class="demo">
+		    <div id="all">
+			    <div id="a" class="a"> id=a margin=4 padding=8
+				    <div id="b" class="b">id=b padding=8
+					    <div id="c" class="c">id=c border=1 margin=4 auto width=300</div>
+				    </div>
+				    <div id="d" class="d">id=d border=10 padding=8</div>
+			    </div>
+		    </div>
+		    <div id="rule"></div>
 		
-		<script>
+            <textarea id="tt"></textarea>
+
+		    <script>
 		
-			var a = $('#a'), b = $('#b'), c = $('#c'), d = $('#d'), o = $('#o'), abcd = new jQuery($('#all')[0].getElementsByTagName("div")), rule = $('#rule');
+			    var a = $('#a'), b = $('#b'), c = $('#c'), d = $('#d'), o = $('#o'), abcd = new jQuery($('#all')[0].getElementsByTagName("div")), rule = $('#rule');
+			   //   $('#tt').on('focusin', function (e) { console.log(e);debugger })
 			
+			    Demo.writeExamples({
+				    'Offset': '-',
+				    'jQuery.prototype.offset': 'a.offset()',
+				    'jQuery.prototype.position': 'a.position()',
+				    'jQuery.prototype.scrollTop': 'a.scrollTop()'
+			    });
 			
-			Demo.writeTestCases({
-				'Offset': '-',
-				'jQuery.prototype.offset': '@a;',
-				'jQuery.prototype.position': '@a;',
-				'jQuery.prototype.scrollTop': '@a;'
-			});
-			
-		</script>
-		
+            </script>
+        </article>
 	</body>
 </html>
