--- a/examples/core/class.html
+++ b/examples/core/class.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
     <meta name="module-info" content="status=complete;attr=#2">
-    <title>类</title>
+    <title>创建类支持</title>
 
+    <!-- 本组件需要以下文件 -->
     <script type="text/javascript" src="../../src/core/core.js"></script>
     <script type="text/javascript" src="../../src/core/class.js"></script>
+    <!-- 本组件需要以上文件 -->
 
     <script type="text/javascript" src="../../apps/demo/demo.js"></script>
 </head>
@@ -21,7 +23,7 @@
                 '创建最简单的类': function () {
 
                     // 创建一个类。
-                    var Animale = new Class({
+                    var Animal = Base.extend({
 
                         // 类的一个方法。
                         say: function () {
@@ -30,16 +32,16 @@
                     });
 
                     // 创建一个类的实例。
-                    var ani = new Animale();
+                    var ani = new Animal();
 
-                    // 调用 Animale 类的 say 方法。
+                    // 调用 Animal 类的 say 方法。
                     ani.say();
 
                 },
                 '定义字段': function () {
 
                     // 创建一个类。
-                    var Animale = new Class({
+                    var Animal = Base.extend({
 
                         // 类的一个字段。
                         name: "这是 Animate 的字段",
@@ -51,18 +53,18 @@
                     });
 
                     // 创建一个类的实例。
-                    var ani = new Animale();
+                    var ani = new Animal();
 
                     ani.name = "ani 实例覆盖了这个字段的值";
 
-                    // 调用 Animale 类的 say 方法。
+                    // 调用 Animal 类的 say 方法。
                     ani.say();
 
                 },
                 '定义构造函数': function () {
 
                     // 创建一个类。
-                    var Animale = new Class({
+                    var Animal = Base.extend({
 
                         // 构造函数。
                         constructor: function (args) {
@@ -71,17 +73,17 @@
                     });
 
                     // 创建一个类的实例。
-                    var ani = new Animale();
+                    var ani = new Animal();
 
                 },
                 '继承': function () {
 
                     // 创建一个类。
-                    var Animale = new Class({
+                    var Animal = Base.extend({
 
                         // 类的一个方法。
                         say: function () {
-                            alert("正在执行 Animale 类的 say 方法");
+                            alert("正在执行 Animal 类的 say 方法");
                         },
 
                         // 构造函数。
@@ -91,7 +93,7 @@
                     });
 
                     // 创建一个类。
-                    var Dog = Animale.extend({
+                    var Dog = Animal.extend({
 
                         // 类的一个方法。
                         say2: function () {
@@ -103,33 +105,21 @@
                     // 创建一个类的实例。
                     var dog = new Dog();
 
-                    // 调用 Animale 类的 say 方法。
+                    // 调用 Animal 类的 say 方法。
                     dog.say();
 
                     // 调用 Dog 类的 say2 方法。
                     dog.say2();
 
                 },
-                //'将一个已经定义好的 JavaScript 函数转为一个类': function () {
-
-                //    function func() {
-                //        alert("我是一个已经定义的 func 函数");
-                //    }
-
-                //    // 从一个 Javascript 函数创建一个类。
-                //    Class.Native(func);
-
-                //    var a = new func();
-
-                //},
                 '使用事件的功能': function () {
 
                     // 创建一个类。
-                    var Animale = new Class({
+                    var Animal = Base.extend({
 
                     });
 
-                    var ani = new Animale();
+                    var ani = new Animal();
                     ani.on('needsay', function (name) {
                         alert("needsay事件被触发了， 参数 name=" + name);
                     });
