--- a/examples/dom/core.html
+++ b/examples/dom/core.html
@@ -71,10 +71,9 @@
                 'setStyle': 'Dom.setStyle(a, "font-size", 14)',
                 'getStyle': 'Dom.getStyle(a, "font-size")',
                 'isHidden': 'Dom.isHidden(a)',
-                //'show': 'Dom.show(a)',
-                //'hide': 'Dom.hide(a)',
-                //'toggle': 'Dom.toggle(a)',
-                //'unselectable': 'Dom.unselectable(a)',
+                'show': 'Dom.show(a)',
+                'hide': 'Dom.hide(a)',
+                'toggle': 'Dom.toggle(a)',
 
                 '属性(Attribute)': '-',
                 'setAttr': 'Dom.setAttr(c, "innerText", "12121")',
@@ -116,7 +115,7 @@
                 'getPosition - 获取在整个窗口的绝对位置': 'Dom.getPosition(a)',
                 'setPosition': 'Dom.setPosition(a, {x:2, y:5})',
                 'getScroll': 'Dom.getScroll(a)',
-                'getScroll': 'Dom.setScroll(a, {x:2, y:5})',
+                'setScroll': 'Dom.setScroll(a, {x:2, y:5})',
 
             });
 
