--- a/examples/ui/core/core.html
+++ b/examples/ui/core/core.html
@@ -5,12 +5,14 @@
     <meta name="module-info" content="status=complete;attr=#4" />
     <title>UI 组件基类</title>
 
-    <link rel="stylesheet" type="text/css" href="../../../src/ui/core/base.css" />
+    <!-- 本组件需要以下文件 -->
+    <link rel="stylesheet" type="text/css" href="../../../src/ui/core/core.css" />
 
     <script type="text/javascript" src="../../../src/core/core.js"></script>
     <script type="text/javascript" src="../../../src/core/class.js"></script>
     <script type="text/javascript" src="../../../src/dom/core.js"></script>
-    <script type="text/javascript" src="../../../src/ui/core/base.js"></script>
+    <script type="text/javascript" src="../../../src/ui/core/core.js"></script>
+    <!-- 本组件需要以上文件 -->
 
     <script type="text/javascript" src="../../../apps/demo/demo.js"></script>
 </head>
