--- a/examples/core/core.html
+++ b/examples/core/core.html
@@ -40,6 +40,7 @@
                 'Array.isArray(原生支持)': 'Array.isArray([])',
                 'Array#indexOf(原生支持)': '[5,4].indexOf(5)',
                 'Array#forEach(原生支持)': '[5,4].forEach(alert)',
+                'Array#filter(原生支持)': '[5,4].filter(function(){return true})',
 
                 'Function 对象扩展': '-',
                 'Function.empty': 'Function.empty()',
