--- a/examples/dom/core.html
+++ b/examples/dom/core.html
@@ -35,65 +35,29 @@
         <script>
 
             Demo.writeExamples({
-                '核心(Core)': '-',
-                '获取 Dom 对象': function () {
-                    Dom.query("#all div"); // 找到 CSS 选择器匹配的全部元素。
-                    Dom.find("#all div");  // 找到 CSS 选择器匹配的第一个元素。
-                    Dom.get("a");          // 根据 ID 获取。
-                },
+                '创建、查找和获取': '-',
+                'query - 查找CSS选择器全部元素': 'Dom.query("#all div")', // 找到 CSS 选择器匹配的全部元素。
+                'find - 查找CSS选择器第一个元素': 'Dom.find("#all div")',
+                'get - 根据 ID 获取': 'Dom.get("a")',
                 'parse - 解析 HTML 源码生成 Dom 对象': function () {
                     Dom.parse("<div/>");
                     Dom.parse("   <div/> f <div/>");
                     Dom.parse("<object />");
                     Dom.parse("<input type=\'radio\' checked=\'checked\'>");
                 },
-                //'Dom.create 0 动态创建 Dom 对象': 'Dom.create("div", "className")',
-
-                //'find - 返回第一个': 'Dom.find(a, "div")',
-                //'query - 返回全部节点': 'Dom.query(a, "div")',
                 'matches': 'Dom.matches(a, "div")',
 
-                'DOM ready(DOMReady)': '-',
-                'ready': 'Dom.ready(function(){ alert("DOM 已经 ready（引用的图片未开始加载）") })',
-
-                '事件(Event)': '-',
+                '事件': '-',
+                'addListener': 'Dom.addListener(a, "click", trace);',
+                'removeListener': 'Dom.removeListener(a, "click", trace);',
                 'on - 绑定事件': 'Dom.on(a, "click", function(){ alert("点击事件") });',
                 'off - 解绑事件': 'Dom.off(a, "click")',
                 'trigger - 手动触发事件': 'Dom.trigger(a, "click")',
+                'ready - DOMReady': 'Dom.ready(function(){ alert("DOM 已经 ready（引用的图片未开始加载）") })',
 
-                '类(Class)': '-',
-                'addClass': 'Dom.addClass(a, "light")',
-                'removeClass': 'Dom.removeClass(a, "light")',
-                'toggleClass': 'Dom.toggleClass(a, "light")',
-                'hasClass': 'Dom.hasClass(a, "light")',
-
-                '样式(Style)': '-',
-                'setStyle': 'Dom.setStyle(a, "font-size", 14)',
-                'getStyle': 'Dom.getStyle(a, "font-size")',
-                'isHidden': 'Dom.isHidden(a)',
-                'show': 'Dom.show(a)',
-                'hide': 'Dom.hide(a)',
-                'toggle': 'Dom.toggle(a)',
-
-                '属性(Attribute)': '-',
-                'setAttr': 'Dom.setAttr(c, "innerText", "12121")',
-                'getAttr': 'Dom.getAttr(c, "innerText")',
-                'setText': 'Dom.setText(c, "cv")',
-                'getText': 'Dom.getText(c)',
-                'setHtml': 'Dom.setHtml(c, "cv")',
-                'getHtml': 'Dom.getHtml(c)',
-
-                '处理(Manipulation)': '-',
+                '文档遍历': '-',
+                'getDocument': 'Dom.getDocument(b)',
                 'contains': 'Dom.contains(a, b)',
-                'render': 'Dom.render(a)',
-                'append': 'Dom.append(a, "append")',
-                'prepend': 'Dom.prepend(a, "prepend")',
-                'after': 'Dom.after(a, "after")',
-                'before': 'Dom.before(a, "before")',
-                
-                'remove': 'Dom.remove(c)',
-
-                '转移(Traversing)': '-',
                 'closest': 'Dom.closest(b,"div")',
                 'parent': 'Dom.parent(b)',
                 'prev': 'Dom.prev(b)',
@@ -101,14 +65,40 @@
                 'first': 'Dom.first(b)',
                 'last': 'Dom.last(b)',
                 'children': 'Dom.children(b)',
+
+                '增删操作': '-',
+                'append': 'Dom.append(a, "append")',
+                'prepend': 'Dom.prepend(a, "prepend")',
+                'after': 'Dom.after(a, "after")',
+                'before': 'Dom.before(a, "before")',
+                'render': 'Dom.render(a)',
+                'remove': 'Dom.remove(c)',
                 'clone': 'Dom.clone(a)',
 
-                '尺寸(Dimension)': '-',
+                '属性和样式': '-',
+                'setAttr': 'Dom.setAttr(c, "innerText", "12121")',
+                'getAttr': 'Dom.getAttr(c, "innerText")',
+                'setText': 'Dom.setText(c, "cv")',
+                'getText': 'Dom.getText(c)',
+                'setHtml': 'Dom.setHtml(c, "cv")',
+                'getHtml': 'Dom.getHtml(c)',
+                'addClass': 'Dom.addClass(a, "light")',
+                'removeClass': 'Dom.removeClass(a, "light")',
+                'toggleClass': 'Dom.toggleClass(a, "light")',
+                'hasClass': 'Dom.hasClass(a, "light")',
+                'setStyle': 'Dom.setStyle(a, "font-size", 14)',
+                'getStyle': 'Dom.getStyle(a, "font-size")',
+                'styleNumber': 'Dom.styleNumber(a, "font-size")',
+                'styleString': 'Dom.styleString(a, "font-size")',
+                'show': 'Dom.show(a)',
+                'hide': 'Dom.hide(a)',
+                'toggle': 'Dom.toggle(a)',
+                'isHidden': 'Dom.isHidden(a)',
+
+                '尺寸和定位': '-',
                 'getSize - 获取带 padding 和 border 的尺寸': 'Dom.getSize(a)',
                 'setSize': 'Dom.setSize(a, {y: 300})',
                 'getScrollSize': 'Dom.getScrollSize(a)',
-
-                '位置(Offset)': '-',
                 'offsetParent': 'Dom.offsetParent(a)',
                 'getOffset - 获取 .offsetParent() 的偏移': 'Dom.getOffset(a)',
                 'setOffset': 'Dom.setOffset(a, {x:2, y:5})',
